version 0.59.10	
07/02/2018 
	- added sort VC by id (margaretha)
	- added test cases regarding VC sharing (margaretha)
	- implemented withdraw VC from publication (margaretha)
	- added Changes file (margaretha)
	- implemented add/invite users to group (margaretha)
	- implemented delete user-group and member tasks (margaretha)
	- added userMemberStatus in group lists (margaretha)
	- updated and added SQL test data (margaretha)
	- added user group related tests (margaretha)
	- implemented custom configuration for deleting user groups and members (margaretha)
	- updated library versions and java environment (margaretha)
	- added expiration time check for member invitation (margaretha)
	- moved .properties files (margaretha) 
	- merged changelog file to Changes (margaretha)
	- updated status codes and error messages to be more detailed (margaretha)
	
version 0.59.9 
19/01/2018
	- restructured basic authentication (margaretha)
	- fixed AuthenticationException to include authentication scheme (margaretha)
	- fixed rewrite redundancy in collection rewrite (margaretha)
	- fixed foundry rewrite for constituents (margaretha)
	- introduced authentication methods, schemes and tokens (margaretha)
	- implemented collection rewrite with multiple licenses (margaretha)
	- fixed foundry rewrite for korap span without wrap node (margaretha)
	- implemented list user group (margaretha)
	- implemented delete VC task (margaretha)
	- implemented create user-group, subscribe to user-groups, unsubscribe to user-groups tasks(margaretha)
	- fixed handling JSON mapping exception for missing enums (margaretha)
    - implemented list VC task (margaretha)
    - added KoralQuery in VC lists (margaretha)
	- implemented edit VC task (margaretha)
	- implemented publish VC task (margaretha)
    - implemented share VC task (margaretha)
    - implemented list only owned VC task (margaretha) 
    - implemented list VC access task (margaretha)
    - implemented search VC by id task (margaretha)