@@ -9,6 +9,8 @@ import javax.mail.internet.MimeMessage;
 import org.apache.velocity.VelocityContext;
 import org.apache.velocity.app.VelocityEngine;
 import org.apache.velocity.context.Context;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.mail.javamail.MimeMessageHelper;
@@ -20,15 +22,19 @@ import de.ids_mannheim.korap.user.User;
 
 @Service
 public class MailService {
+    
+    private static Logger jlog =
+            LoggerFactory.getLogger(MailService.class);
+    
     @Autowired
     private AuthenticationManagerIface authManager;
-//    @Autowired
+    @Autowired
     private JavaMailSender mailSender;
-//    @Autowired
+    @Autowired
     private VelocityEngine velocityEngine;
 
     public void sendMemberInvitationNotification (String inviteeName,
-            String groupName, String inviter) {
+            String sender, String groupName, String inviter) {
 
         MimeMessagePreparator preparator = new MimeMessagePreparator() {
 
@@ -38,7 +44,7 @@ public class MailService {
 
                 MimeMessageHelper message = new MimeMessageHelper(mimeMessage);
                 message.setTo(new InternetAddress(invitee.getEmail()));
-                message.setFrom("noreply-korap-notification@ids-mannheim.de");
+                message.setFrom(sender);
                 message.setSubject("Invitation to join group");
                 message.setText(prepareText(inviteeName, groupName, inviter),
                         true);
@@ -52,12 +58,20 @@ public class MailService {
             String inviter) {
         Context context = new VelocityContext();
         context.put("username", username);
-        context.put("groupName", groupName);
+        context.put("group", groupName);
         context.put("inviter", inviter);
-
+        
         StringWriter stringWriter = new StringWriter();
-        velocityEngine.mergeTemplate("invitationNotification.vm",
-                StandardCharsets.UTF_16.name(), context, stringWriter);
-        return stringWriter.toString();
+//        URL url = getClass().getClassLoader().getResource("notification.vm");
+//        System.out.println(url);
+//        Template t = velocityEngine.getTemplate(url.toString());
+//        System.out.println(t);
+        
+        velocityEngine.mergeTemplate("notification.vm",
+                StandardCharsets.UTF_8.name(), context, stringWriter);
+        
+        String message = stringWriter.toString();
+        jlog.debug(message);
+        return message;
     }
 }
