@@ -12,6 +12,8 @@ ldap.config = file-path-to-ldap-config
 # Kustvakt
 ## mail settings
 mail.enabled = false
+mail.receiver = test-email
+mail.sender = noreply@ids-mannheim.de
 
 ## server
 server.port=8089
